[package]
name = "gfx-tutorial"
version = "0.1.0"
authors = ["mahulst <michel@voorkanter.com>"]
edition = "2018"

[features]
default = []
metal = ["gfx-backend-metal"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]

[dependencies]
winit = "0.18"
log = "0.4.0"
simple_logger = "1.0"
gfx-hal = "0.1"
arrayvec = "0.4"
shaderc = "0.3.16"
image = "0.21"
nalgebra-glm = "0.2"
lyon = "0.13"
[dependencies.gfx-backend-vulkan]
version = "0.1"
optional = true

[target.'cfg(target_os = "macos")'.dependencies.gfx-backend-metal]
version = "0.1"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
version = "0.1"
optional = true
